[lworld][c1] TestLWorld.java crashes with -XX:+UseSerialGC

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • repo-valhalla
    • Affects Version/s: repo-valhalla
    • Component/s: hotspot

      $ jtreg -javaoption:-XX:+EnableValhallaC1 -javaoption:-XX:TieredStopAtLevel=1 -javaoption:-XX:+UseSerialGC TestLWorld.java

      # SIGSEGV (0xb) at pc=0x00007f31bd4ba498, pid=18014, tid=18016
      #
      # JRE version: Java(TM) SE Runtime Environment (14.0) (fastdebug build 14-internal+0-adhoc.iklam.open)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-internal+0-adhoc.iklam.open, mixed mode, tiered, serial gc, linux-amd64)

      Stack: [0x00007f31ddd5f000,0x00007f31dde60000], sp=0x00007f31dde5e590, free space=1021k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      J 257 c1 compiler.valhalla.valuetypes.TestLWorld.test88([Ljava/lang/Object;[Ljava/lang/Object;[Ljava/lang/Object;[Ljava/lang/Object;)V (34 bytes) @ 0x00007f31bd4ba498 [0x00007f31bd4ba2e0+0x00000000000001b8]
      j compiler.valhalla.valuetypes.TestLWorld.test88_verifier(Z)V+52
      j jdk.internal.reflect.GeneratedMethodAccessor7.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+63
      j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base@14-internal
      j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base@14-internal
      j compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/Class;)V+318
      j compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/String;[Ljava/lang/Class;)V+42
      j compiler.valhalla.valuetypes.TestLWorld.main([Ljava/lang/String;)V+45
      v ~StubRoutines::call_stub
      V [libjvm.so+0x12ada2d] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x86d
      V [libjvm.so+0x137f2d5] jni_invoke_static(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, Thread*) [clone .isra.146] [clone .constprop.235]+0x275
      V [libjvm.so+0x13a0841] jni_CallStaticVoidMethod+0x1f1
      C [libjli.so+0x581d] JavaMain+0xe4d
      C [libjli.so+0x91e9] ThreadJavaMain+0x9

            Assignee:
            Ioi Lam
            Reporter:
            Ioi Lam
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: