8229382: [lworld][c1] TestLWorld.java crashes with -XX:+UseSerialGC

Do not cache C1 constants in conditionally executed LIR

Reviewed-by: thartmann